# fc-playground

./: .gitignore  Awesome.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/app-desktop/: Awesome.toml  Cargo.toml  Tauri.toml
crates/app-desktop/capabilities/: main.toml
crates/app-desktop/src/: error.rs  lib.rs  main.rs  win.rs
crates/app-desktop/src/event/: hub_event.rs  mod.rs  plugin.rs
crates/app-desktop/src/init/: agents_initializer.rs  mod.rs  spaces_initializer.rs
crates/app-desktop/src/ipc/: error.rs  mod.rs
crates/lib-ais/: Cargo.toml
crates/lib-ais/src/: agent_defs.rs  error.rs  lib.rs
crates/lib-ais/src/_test_support/: agent_defs.rs  mock_utils.rs  mod.rs  print.rs  seed_for_runner.rs
crates/lib-ais/src/chain/: agent_node.rs  branch_node.rs  chain.rs  chain_node.rs  cond_node.rs  input_content.rs  mod.rs  resolvers.rs
crates/lib-ais/src/client/: ai_manager.rs  mod.rs  ollama_client.rs  openai_client.rs
crates/lib-ais/src/client/fc/: fc_client.rs  mod.rs
crates/lib-ais/src/runner/: mod.rs  runner.rs
crates/lib-ais/src/runner/_tests/: tests_runner.rs
crates/lib-ais/src/tools/: mod.rs
crates/lib-ais/src/types/: gen.rs  mod.rs
crates/lib-core/: Cargo.toml
crates/lib-core/src/: lfs.rs  lib.rs
crates/lib-core/src/_test_support/: mod.rs  seeders.rs
crates/lib-core/src/event/: error.rs  hub.rs  mod.rs  types.rs
crates/lib-core/src/model/: error.rs  mod.rs  model_manager.rs
crates/lib-core/src/model/base/: crud_fns.rs  db_bmc.rs  id.rs  mod.rs  prep_fields.rs  sea_iden.rs
crates/lib-core/src/model/cfile_db/: conv_ref.rs  mod.rs  msg.rs  stack_step.rs
crates/lib-core/src/model/dfile_db/: ditem_ref.rs  mod.rs  part.rs
crates/lib-core/src/model/main_db/: agent.rs  cfile.rs  conv.rs  dfile.rs  ditem.rs  ditem_dsource.rs  drive.rs  dsource.rs  mod.rs  space.rs  space_drive.rs
crates/lib-core/src/model/store/: error.rs  mod.rs  sea_utils.rs
crates/lib-core/src/model/store/db_sqlite/: db_config.rs  mod.rs  sldb.rs  sql_splitter.rs
crates/lib-core/src/model/store/db_sqlite/schemas/: cfile-db-schema.sql  dfile-db-schema.sql  main-db-schema.sql
crates/lib-core/src/model/support/: gen_mm_crud_macro.rs  gen_sldb_crud_macro.rs  mod.rs  prelude.rs
crates/lib-rpc/: Cargo.toml
crates/lib-rpc/src/: error.rs  lib.rs  response.rs  rpc_params.rs  types.rs
crates/lib-rpc/src/rpcs/: agent_rpc.rs  conv_rpc.rs  drive_rpc.rs  dsource_rpc.rs  mod.rs  space_rpc.rs
crates/lib-rpc/src/rpcs/ai_rpc/: mod.rs
crates/lib-rpc/src/rpcs/support/: get_rpc_macro.rs  mod.rs  prelude.rs
crates/lib-splitters/: Cargo.toml
crates/lib-splitters/src/: error.rs  lib.rs  md_splitter.rs  splitter.rs
crates/lib-test-utils/: Cargo.toml
crates/lib-test-utils/src/: lib.rs
crates/lib-utils/: Cargo.toml
crates/lib-utils/src/: b64.rs  derive_commons.rs  hbs.rs  lib.rs  trace.rs  uuid.rs  x_string.rs  x_vec.rs
crates/lib-utils/src/time/: error.rs  mod.rs  unix_time.rs
crates/lib-workers/: Cargo.toml
crates/lib-workers/src/: lib.rs
crates/lib-workers/src/conv_worker/: conv_worker.rs  error.rs  mod.rs
crates/lib-workers/src/dsource_worker/: dsource_worker.rs  error.rs  mod.rs
crates/lib-workers/src/dsource_worker/processors/: dfiles_refreshed.rs  ditems_refreshed.rs  dsource_added.rs  mod.rs
crates/tools/ts-types/: Cargo.toml
crates/tools/ts-types/src/: main.rs  model_types.rs  rpc_types.rs
doc/: chain.md
frontend/: README.md  package.json  pcss.config.js  rollup.config.js  sketchdev.config.js
frontend/buns/: build.ts
frontend/dist-ui/: index.html
frontend/scripts/: tsconfig.json
frontend/scripts/src/: gen-ts-types.ts
frontend/src-ui/: tsconfig.json
frontend/src-ui/pcss/: base.pcss  d-ui.pcss  defaults.pcss  main.pcss  var-colors.pcss  var-dims.pcss  var-elevs.pcss
frontend/src-ui/pcss/common/: button.pcss  form.pcss  index.pcss  link.pcss  main-view.pcss  popup.pcss
frontend/src-ui/pcss/comps/: index.pcss  nav-p.pcss  selector-pop.pcss  simple-dlg.pcss  tabs-p.pcss
frontend/src-ui/pcss/elems/: index.pcss
frontend/src-ui/pcss/views/: app-v.pcss  index.pcss
frontend/src-ui/pcss/views/agent/: agent-v.pcss  agents-v.pcss  index.pcss
frontend/src-ui/pcss/views/drive/: all-drives-p.pcss  drives-v.pcss  index.pcss
frontend/src-ui/pcss/views/space/: index.pcss  space-chat.pcss  space-v.pcss  spaces-v.pcss
frontend/src-ui/src/: app-init.ts  common-handlers.ts  index.ts  router.ts  svg-symbols.ts
frontend/src-ui/src/behaviors/: bhv-popup.ts  index.ts
frontend/src-ui/src/bindings/: index.ts  model_types.ts  rpc_types.ts
frontend/src-ui/src/comps/: index.ts  nav-p.ts  selector-pop.ts  simple-dlg.ts  tabs-p.ts
frontend/src-ui/src/elems/: do-toggle.ts  index.ts
frontend/src-ui/src/fmc-ai/: index.ts
frontend/src-ui/src/fmc-model/: data-hub.ts  index.ts
frontend/src-ui/src/ipc/: index.ts
frontend/src-ui/src/utils/: dom-utils.ts  index.ts
frontend/src-ui/src/views/: app-v.ts  index.ts
frontend/src-ui/src/views/agent/: agent-v.ts  agents-v.ts  index.ts
frontend/src-ui/src/views/drive/: all-drives-p.ts  drives-v.ts  index.ts
frontend/src-ui/src/views/space/: dsource-c.ts  index.ts  space-chat.ts  space-v.ts  spaces-v.ts
test-data/: sky-colors.md  time-dilation.md
test-data/sub/: micro-fluodic.md
