[package]
name = "lib-rpc"
version = "0.0.0"
edition = "2021"
rust-version = "1.75"

[lib]
doctest = false

[lints]
workspace = true

[features]
for-ts = ["schemars"]

[dependencies]
# -- App Libs
lib-core = { path = "../lib-core", features = ["with-rpc"]}
lib-ais = { path = "../lib-ais", features = ["with-rpc"]}
# -- Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Data
modql = { workspace = true }
# -- Rpc
rpc-router = { workspace = true }
# -- Others
derive_more = { workspace = true }
paste = "1"

# -- Feature: for-ts
schemars = {workspace = true, optional = true}