[package]
name = "lib-utils"
edition = "2021"
rust-version = "1.76"
version = "0.1.0"

[lib]
doctest = false

[lints]
workspace = true

[features]
# default = ["for-sql", "for-ts"]
for-sql = ["modql", "rusqlite", "sea-query"]
for-ts = ["schemars"]

[dependencies]
# -- Time
time = { workspace = true }
# -- Serde
serde = { workspace = true }
serde_json = { workspace = true }
# -- Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# -- UUID
uuid = {version = "1", features = ["v4","v7"]}
# -- Encoders
data-encoding = "2.5"
# -- Others
derive_more = {workspace = true}
handlebars = "5"

# -- For features
modql = { workspace = true, optional = true }
sea-query = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
schemars = {workspace = true, optional = true}
