[package]
name = "ts-types"
version = "0.0.0"
edition = "2021"
rust-version = "1.75"

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-core = { path = "../../lib-core", features = ["for-ts"]}
lib-rpc = { path = "../../lib-rpc", features = ["for-ts"]}
# -- TS
schemars = { workspace = true}
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# -- Files
simple-fs = { workspace = true }